# rpg_old_school

./: .gitignore  CMakeLists.txt
include/: Arme.h  Armure.h  Display.h  Ennemi.h  Joueur.h  Objet.h  Personnage.h  Potion.h
src/: Personnage.cpp  main.cpp
src/classes/: Arme.cpp  Armure.cpp  Joueur.cpp  Personnage.cpp  Potion.cpp
src/functions/: Display.cpp
src/sprites/: big_slime_sprite.txt  little_slime.txt  menu.txt  slime_sprite.txt
